Registered models in the admin panel

--- a/templates/ads/ad_list.html
+++ b/templates/ads/ad_list.html
@@ -1,7 +1,7 @@
 {% extends "ads/base.html" %}
 {% block title %}My Blog{% endblock %}
 {% block content %}
-    <h1>My Blog</h1>
+    <h1>Объявления</h1>
     {% for ad in ads %}
         <h2>
             <a href="{{ ad.get_absolute_url }}"> {{ ad.title }}</a>
