--- a/templates/ads/ad_detail.html
+++ b/templates/ads/ad_detail.html
@@ -17,6 +17,10 @@
     <p><strong>Состояние:</strong> {{ ad.get_condition_display }}</p>
     <p><strong>Дата создания:</strong> {{ ad.created_at }}</p>
 
+    {% if user.is_authenticated and ad.user == user %}
+        <a href="{% url 'ads:update_ad' ad.pk %}" class="btn btn-warning">Редактировать</a>
+    {% endif %}
+
     <a href="{% url 'ads:ad_list' %}" class="btn btn-primary">Назад к списку</a>
 </div>
 {% endblock %}
