--- a/templates/ads/base.html
+++ b/templates/ads/base.html
@@ -25,7 +25,7 @@
         <a href="{% url 'login' %}?next={{ request.path }}">Войти</a>
     {% endif %}
     <p>
-        <a href="{% url 'signup' %}">Зарегистрироваться</a>
+        <a href="{% url 'signup' %}">Регистрация</a>
     </p>
     <hr>
 </div>
