--- a/templates/registration/signup.html
+++ b/templates/registration/signup.html
@@ -5,7 +5,6 @@
     <form method='post'>
         {% csrf_token %}
         {{ form.as_p }}
-
-        <p><input type='submit' value='Sign Up'></p>
+        <p><input type='submit' value='<Зарегистрироваться'></p>
     </form>
 {% endblock %}
