--- a/templates/ads/ad_detail.html
+++ b/templates/ads/ad_detail.html
@@ -19,6 +19,7 @@
 
     {% if user.is_authenticated and ad.user == user %}
         <a href="{% url 'ads:update_ad' ad.pk %}" class="btn btn-warning">Редактировать</a>
+        <a href="{% url 'ads:delete_ad' ad.pk %}" class="btn btn-danger">Удалить</a>
     {% endif %}
 
     <a href="{% url 'ads:ad_list' %}" class="btn btn-primary">Назад к списку</a>
