--- a/templates/ads/ad_list.html
+++ b/templates/ads/ad_list.html
@@ -1,13 +1,16 @@
 {% extends "ads/base.html" %}
 {% block title %}Список объявлений{% endblock %}
 
+
 {% block content %}
 <div class="container mt-4">
     <h1 class="mb-4">Объявления</h1>
 
     <form method="get" class="mb-4">
         <div class="row">
+
             <!-- Поле поиска -->
+
             <div class="col-md-4">
                 <input type="text" name="q" class="form-control" placeholder="Поиск по ключевым словам" value="{{ request.GET.q }}">
             </div>
@@ -29,11 +32,13 @@
 
             <div class="col-md-3">
                 <select name="category" class="form-control">
-                <option value="">Все категории</option>
-                {% for category in categories %}
-                    <option value="{{ category }}" {% if request.GET.category == category %}selected{% endif %}>{{ category }}</option>
-                {% endfor %}
-            </select>
+                    <option value="">Все категории</option>
+                        {% for category in categories %}
+                            <option value="{{ category }}" {% if selected_category == category %}selected{% endif %}>
+                                {{ category }}
+                            </option>
+                        {% endfor %}
+</select>
             </div>
 
             <!-- Фильтр по состоянию товара -->
@@ -41,8 +46,8 @@
             <div class="col-md-3">
                 <select name="condition" class="form-control">
                     <option value="">Все состояния</option>
-                    <option value="new">Новый</option>
-                    <option value="used">Б/У</option>
+                    <option value="new" {% if selected_condition == "new" %}selected{% endif %}>Новый</option>
+                    <option value="used" {% if selected_condition == "used" %}selected{% endif %}>Б/У</option>
                 </select>
             </div>
 
@@ -62,7 +67,8 @@
             <a href="{{ ad.get_absolute_url }}">{{ ad.title }}</a>
         </div>
     {% empty %}
-        <p>Нет объявлений для отображения.</p>
+        <p>Нет объявлений</p>
     {% endfor %}
+    {% include 'pagination.html' with page=posts %}
 </div>
 {% endblock %}
