--- a/templates/ads/base.html
+++ b/templates/ads/base.html
@@ -30,6 +30,7 @@
     <hr>
     {% if user.is_authenticated %}
         <a href="{% url 'ads:ad_form' %}" class="btn btn-success">Создать объявление</a>
+        <a href="{% url 'ads:proposal_create' %}" class="btn btn-success">Создать предожение обмена</a>
     {% endif %}
 </div>
 </body>
