--- a/templates/ads/base.html
+++ b/templates/ads/base.html
@@ -27,6 +27,12 @@
     <p>
         <a href="{% url 'signup' %}">Регистрация</a>
     </p>
+    <p>
+        <a href="{% url 'ads:ad_list' %}">Посмотреть все объявления</a>
+    </p>
+    <p>
+        <a href="{% url 'ads:proposal_list' %}">Посмотреть все предложения обмена</a>
+    </p>
     <hr>
     {% if user.is_authenticated %}
         <a href="{% url 'ads:ad_form' %}" class="btn btn-success">Создать объявление</a>
