--- a/templates/ads/ad_form_update.html
+++ b/templates/ads/ad_form_update.html
@@ -5,6 +5,6 @@
 <form method="post">
   {% csrf_token %}
   {{ form.as_p }}
-  <button type="submit">Сохранить изменения</button>
+  <button type="submit" class="btn btn-primary">Сохранить изменения</button>
 </form>
 {% endblock %}
